# snake

./: .gitattributes  A GUI Snake Game Coded in Rust.latex  AP Computer Science Principles: 2021 Create Task Brighton Sikarskie.odt  Cargo.toml  README.md
PDF's and LaTeX/: A GUI Snake Game Coded in Rust.tex  AP Computer Science Principles Create Task.latex
assets/: snake gameplay.mkv
src/: draw.rs  food.rs  game.rs  main.rs  snake.rs
